@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 19-02-2005 added: System.CPUTemperature, System.GPUTemperature, and System.FanSpeed to the infoManager.
   - 19-02-2005 changed: audiobuffer sizes for smoother pal video
   - 19-02-2005 added: Option to disable thumbnail generation during picture viewing.
   - 19-02-2005 fixed: LCD: last bar of the progress is now shown
